<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_nml_transforms</name>
  <version>0.0.4</version>
  <description>A ROS2 package that provides functionality for continuously applying several simple transforms to message data.</description>
  <maintainer email="nml@whit.contact">a. whit</maintainer>
  <license>Mozilla Public License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
